package idi.edu.idatt.mappe.files.writer;

import idi.edu.idatt.mappe.models.Player;

import java.io.FileWriter;
import java.io.IOException;
import java.util.List;

public class PlayerFileWriterCVS implements PlayerFileWriter {

    /**
     * Writes a list of players to a file in CSV format.
     *
     * @param players The list of players to write.
     * @param filePath The path to the file where the players will be saved.
     * @throws IOException If an I/O error occurs.
     */
    @Override
    public void savePlayers(List<Player> players, String filePath) throws IOException {
        try (FileWriter writer = new FileWriter(filePath)) {
            for (Player player : players) {
                writer.write(player.getName() + "," + player.getToken() + "\n");
            }
        } catch (IOException e) {
            throw new IOException("Could not write to file");
        }
    }}
